# quant_finance

./: .gitignore  .pre-commit-config.yaml  README.md  airflow-docker-compose.yaml  airflow.Dockerfile  constraints-3.12.txt  mlflow.Dockerfile  pyproject.toml  pytest.ini  requirements-airflow.txt  requirements-constraints.txt  requirements-mlflow.txt
dags/backtest_metrics/: __init__.py  const_vars.py
dags/backtest_metrics/from_signals/: portfolio_runs.py
dags/dags_air_env/: dag_air_env_blank_template.py  dag_air_env_postgres_maintenance.py  dag_air_env_sql_infra.py
dags/dags_backtest_runs/: const_vars.py  dag_btr_01_data_prep.py  dag_btr_02_features_prep.py  dag_btr_portfolio_performance.py
dags/dags_backtest_runs/btr_01_data_prep/task_groups/: tg_01_missing_prices.py  tg_02_target_vars.py
dags/dags_backtest_runs/btr_02_features_prep/: const_vars.py
dags/dags_backtest_runs/btr_02_features_prep/feature_params/: set_1.py
dags/dags_backtest_runs/btr_02_features_prep/task_groups/: tg_01_single_calcs.py  tg_02_range_calcs.py
dags/dags_pytorch_models/: dag_ptm_gpu_test.py
dags/dags_stock_market/: const_vars.py  dag_sm_etl_01_fred.py  dag_sm_etl_02_model_prep_api.py  dag_sm_etl_03_alpha_vantage.py  dag_sm_files_first_rate_data.py  dag_sm_math_calcs.py  dag_sm_math_metadata.py
dags/dags_stock_market/sm_etl_01_fred/: sql_queries.py
dags/dags_stock_market/sm_etl_01_fred/task_groups/: tg_01_process_raw_data.py
dags/dags_stock_market/sm_etl_01_fred/util_funcs/: func_create_fred_temp_table.py
dags/dags_stock_market/sm_etl_02_model_prep_api/task_groups/: tg_01_main_etl.py
dags/dags_stock_market/sm_etl_03_alpha_vantage/: util_funcs.py
dags/dags_stock_market/sm_etl_03_alpha_vantage/task_groups/: tg_01_main_etl.py
dags/dags_stock_market/sm_files_first_rate_data/task_groups/: tg_01_process_csv_files.py
dags/dags_stock_market/sm_math_calcs/: dag_vars.py
dags/dags_stock_market/sm_math_calcs/task_groups/: tg_01_previous_day_columns.py  tg_02_algebra_values.py
dags/dags_stock_market/sm_math_metadata/: dag_vars.py
dags/dags_stock_market/sm_math_metadata/task_groups/: tg_01_correlation_analysis.py  tg_01_numerical_analysis.py
dags/global_airflow/: airflow_utils.py  pytorch_utils.py
dags/global_utils/: develop_vars.py  general_utils.py  sql_utils.py
dags/schwab_api/: const_vars.py  market_data.py  meta_info.py  place_orders.py  util_funcs.py
dags/sql_infra/: btm_tg_from_signals.py  btr_tg_market_data.py  sm_tg_daily_data.py  sm_tg_intraday.py  universal_vars.py
dbt_sql/: dbt_project.yaml
dbt_sql/models/example/: schema.yml
dbt_sql/models/step_0_load/: description.txt
dbt_sql/models/step_1_staging/: description.txt
dbt_sql/models/step_2_intermediate/: description.txt
dbt_sql/models/step_3_mart/: description.txt
dbt_sql/models/step_4_write/: description.txt
fast_api/modin_api/: modin_utils.py  run_modin_api.py
fast_api/modin_api/backtest_runs_api/: const_vars.py
fast_api/modin_api/backtest_runs_api/btr_01_data_prep/: api_router.py  create_predictions.py  fill_missing_price_data.py
fast_api/modin_api/stock_market_api/: const_vars.py
fast_api/modin_api/stock_market_api/sm_etl_01_fred/: __init__.py  api_router.py  process_combined_data.py
fast_api/modin_api/stock_market_api/sm_files_first_rate_data/: api_router.py  process_csv_files.py
pytorch_scripts/: torch_cross_gpu.py  torch_data_parallel.py
pytorch_scripts/portfolio_optimization/: three_asset_example.py
streamlit/: streamlit_main.py  streamlit_run.py
tests_airflow/: run_tests_airflow.py  tests_airflow_utils.py
tests_airflow/test_air_env/: total_tests.py
tests_airflow/test_air_env/test_files/: postgres_maintenance.py
tests_coverage/: run_tests_coverage.py
tests_coverage/algo_metrics/: conftest.py
tests_coverage/algo_metrics/tech_analysis/data/: cs-accum.csv  cs-adx.csv  cs-atr.csv  cs-atr2.csv  cs-bbands.csv  cs-cci.csv  cs-dc.csv  cs-dc2.csv  cs-easeofmovement.csv  cs-fi.csv  cs-kama.csv  cs-kc.csv  cs-macd.csv  cs-mfi.csv  cs-obv.csv  cs-percentr.csv  cs-ppo.csv  cs-psar.csv  cs-pvo.csv  cs-roc.csv  cs-rsi.csv  cs-soo.csv  cs-stc.csv  cs-stochrsi.csv  cs-tsi.csv  cs-ui.csv  cs-ultosc.csv  cs-vortex.csv  cs-vpt.csv  cs-vwap.csv  cs-wma.csv
tests_coverage/algo_metrics/tech_analysis/unit/: test_momentum.py  test_others.py  test_trend.py  test_volatility.py  test_volume.py
tests_coverage/algo_metrics/trade_methods/unit/: test_adaptive_techniques.py  test_advanced_techniques.py  test_basic_calcs.py  test_behavioral.py  test_charting.py  test_cycles.py  test_day_trading.py  test_event_driven.py  test_momentums.py  test_noise.py  (+6 more)
tests_coverage/backtest_metrics/: conftest.py
util_bash_scripts/: git_add_commit.sh  git_commit_reset_all.sh  pre_commit_install.sh  pre_commit_uninstall.sh  restart_airflow.sh
util_python_scripts/: schwab_initial_refresh_token.py  shutdown_local_port.py  sql_drop_schemas.py  sql_postgres_maintenance.py
util_txt_files/: poetry_cmds.txt
(+158 files in other folders)
